# cliquest2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  ctinput  input_test.sh  input_test.txt  run.sh
include/: cliquest_error.h  color.h  color_print.h  data_table.h  scene.h  system.h  wrapp.h
src/: CMakeLists.txt  cliquest.c
src/cliquest/: CMakeLists.txt  cliquest.c
src/lib/: CMakeLists.txt  color.c  org.c  scene.c  scene_handler.c  stub.c  system.c
test/: CMakeLists.txt  cliquest_test.cpp  clisceneUT.cpp  clisceneUT.inp  clisystemUT.cpp  clisystemUT.inp
text/: dummy.sh  org.sh  prologue.txt  prologue_org.txt  title.txt
